recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:12: error: illegal start of simple expression
}
^